fixed text above qualities of our coaches text size and cut off

--- a/src/components/CoachContainer.css
+++ b/src/components/CoachContainer.css
@@ -208,6 +208,11 @@
   .divchakra-stack3 {
     margin-top: 20px; 
   }
+  
+  .coach-text-description {
+    font-size: var(--font-size-3xl);
+    line-height: 43px;
+  }
 }
 
 @media screen and (width <= 450px) {
